# VOLEmachine

./: A1-Task4-S18-20230376-20230517-20230278-main.cpp  A1-Task4-S18-20230376-20230517-20230278-vole.cpp  A1-Task4-S18-20230376-20230517-20230278-vole.h  A1-Task4-S18-20230376-20230517-20230278.cpp  CMakeLists.txt  CMakeListsGUI.txt  README.md  main.cpp  mainUI.cpp  vole.cpp  vole.h  vole2.cpp  vole2.h
